Fix scrollbar issues

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
+  display: flex;
 
   @media (max-width: 768px) {
     padding: 2rem;
